--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+csv = "1.3.1"
 duckdb = "1.2.2"
 postgres = "0.19.10"
 quick-xml = "0.37.5"
 regex = "1.11.1"
+serde = { version = "1.0.219", features = ["derive"] }
