--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ futures = "0.3.31"
 postgres = "0.19.10"
 quick-xml = "0.37.5"
 regex = "1.11.1"
-reqwest = { version = "0.12.15", features = ["stream"] }
+reqwest = { version = "0.12.15", features = ["json", "stream"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
 tokio-util = { version = "0.7.15", features = ["io"] }
 toml = "0.8.22"
