--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-compression = { version = "0.4.23", features = ["gzip", "tokio"] }
+bollard = "0.19.0"
 clap = { version = "4.5.38", features = ["cargo"] }
 csv = "1.3.1"
 duckdb = "1.2.2"
