--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ async-compression = { version = "0.4.23", features = ["gzip", "tokio"] }
 bollard = "0.19.0"
 clap = { version = "4.5.38", features = ["cargo"] }
 csv = "1.3.1"
-duckdb = { version = "1.2.2", features = ["bundled"] }
+duckdb = { version = "1.2.2", features = ["bundled"], optional = true }
 futures = "0.3.31"
 postgres = "0.19.10"
+postgres-types = { version = "0.2.9", features = ["derive"] }
 quick-xml = { version = "0.37.5", features = ["escape-html"] }
 regex = "1.11.1"
 reqwest = { version = "0.12.15", features = ["json", "stream"] }
@@ -18,3 +19,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
 tokio-util = { version = "0.7.15", features = ["io"] }
+
+[features]
+duckdb = ["dep:duckdb"]
