--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,16 @@ clap = { version = "4.5.38", features = ["cargo"] }
 csv = "1.3.1"
 duckdb = { version = "1.2.2", features = ["bundled"], optional = true }
 futures = "0.3.31"
+glob = "0.3.3"
 postgres = "0.19.10"
 quick-xml = { version = "0.37.5", features = ["escape-html"] }
 regex = "1.11.1"
-reqwest = { version = "0.12.15", features = ["json", "stream"] }
+reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.145"
 tokio = { version = "1.45.0", features = ["full"] }
 tokio-util = { version = "0.7.15", features = ["io"] }
+toml = "0.9.5"
 
 [features]
 duckdb = ["dep:duckdb"]
